# agentic-revenue-cpq

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/: __init__.py
apps/backend/: Dockerfile  __init__.py  main.py
apps/frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
apps/mcp_server/: __init__.py  main.py
configs/: __init__.py  logging.py
docs/architecture/: cloud-agnostic-provider-architecture.md  gcp-deployment-profile.md  langgraph-workflow-diagram.html  langgraph-workflow-diagram.md  logical-architecture-diagram.md  mcp-remote-transport-auth-decision.md  mcp-threat-model.md  oci-deployment-architecture.md  oci-deployment-profile.md  official-mcp-exposure-decision.md  physical-architecture-diagram.md  provider-interface-contracts.md
docs/planning/: CODEX_PROJECT_PROMPT.md  FINAL_AGENTS.md  MCP_IMPLEMENTATION_TASKS.md  PRD.md  TASKS.md  (+1 more)
integrations/: __init__.py
schemas/: __init__.py  chat.py  quote.py  runtime.py
scripts/: generate_architecture_diagram.swift  generate_logical_architecture_diagram.swift  generate_physical_architecture_diagram.swift  validate_mcp_stdio.py
services/: __init__.py
tests/: conftest.py  test_agent_graph.py  test_agent_orchestrator.py  test_architecture_guardrails.py  test_backend_chat.py  test_backend_health.py  test_business_store.py  test_cpq_pricing.py  test_cpq_quote.py  test_cpq_recommendation.py  test_integration_opportunity_to_quote.py  test_llm_client.py  test_logging.py  test_mcp_audit.py  test_mcp_contracts.py  test_mcp_execution_engine.py  test_mcp_official_adapter.py  test_mcp_server_entrypoint.py  test_mcp_stdio_integration.py  test_ollama_client.py  test_opportunity_quote_tools.py  test_platform_config.py  test_platform_providers.py  test_rag.py  test_runtime_profile.py  test_salesforce_mock.py  test_tool_registry.py
(+49 files in other folders)
